# zebra_puzzles

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yaml  pyproject.toml
.claude/skills/add-language/: SKILL.md  validate_config.py
.github/workflows/: ci.yaml
config/: config.yaml  config_houses_eng.yaml  config_smoerrebroed.yaml
config/language/da/: config_huse.yaml  config_smoerrebroed.yaml  huse.yaml  smoerrebroed.yaml
config/language/de/: Hauser.yaml  Häuser  Häuser.yaml
config/language/en/: houses.yaml
config/language/eng/: config_houses.yaml
config/language/fi/: talot.yaml
config/language/fo/: hus.yaml  hús.yaml
config/language/is/: husum.yaml
config/language/nb/: hus.yaml
config/language/nl/: huizen.yaml
config/language/nn/: hus.yaml
data/: zebra_puzzle_0_solution.txt  zebra_puzzle_1.txt  zebra_puzzle_1_solution.txt  zebra_puzzle_2_solution.txt  zebra_puzzle_3_solution.txt  zebra_puzzle_4_solution.txt  zebra_puzzle_5_solution.txt  zebra_puzzle_6_solution.txt  zebra_puzzle_7_solution.txt  zebra_puzzle_8_solution.txt  zebra_puzzle_9_solution.txt
responses/: zebra_puzzle_0_response.json  zebra_puzzle_1_response.json  zebra_puzzle_2_response.json  zebra_puzzle_3_response.json
scores/: puzzle_scores_gpt-4o-mini_da_huse_3x2_2.txt  puzzle_scores_gpt-4o-mini_da_huse_3x2_4.txt  puzzle_scores_gpt-4o-mini_da_huse_3x4_10.txt  puzzle_scores_gpt-4o-mini_da_smoerrebroed_2x1_2.txt  puzzle_scores_gpt-4o-mini_da_smoerrebroed_3x3_4.txt  puzzle_scores_gpt-4o-mini_da_smoerrebroed_3x3_5_rh_4_puzzles.txt  puzzle_scores_gpt-4o-mini_da_smoerrebroed_4x4_4.txt  puzzle_scores_o3-mini_da_huse_3x2_4.txt  puzzle_scores_o3-mini_da_smoerrebroed_3x3_4.txt  puzzle_scores_o3-mini_da_smoerrebroed_4x4_4.txt
src/scripts/: build_dataset.py  evaluate.py  fix_files.py  format_datasets.py  main.py  plot_performance.py
src/zebra_puzzles/: __init__.py  clue_analysis.py  clue_removal.py  clue_selection.py  compare_solutions.py  eval_comparisons.py  eval_pipeline.py  evaluation.py  file_utils.py  load_data.py  pipeline.py  plot_pipeline.py  plots.py  prompt_completion.py  red_herring_selection.py  zebra_solver.py  zebra_utils.py
tests/: __init__.py  conf_test.py  conftest.py  test_evaluation.py  test_module.py  test_pipeline.py  test_plot_pipeline.py  test_zebra_utils.py
(+54 files in other folders)
