[project]
name = "zebra_puzzles"
version = "0.0.0"
description = "Generation of zebra puzzles."
readme = "README.md"
authors = [
    {name = "Sofie Helene Bruun", email = "sofie.bruun@alexandra.dk"},
]
maintainers = [
    {name = "Sofie Helene Bruun", email = "sofie.bruun@alexandra.dk"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.66.3",
    "python-constraint2>=2.1.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
]

[project.urls]
Repository = "https://github.com/alexandrainst/zebra_puzzles"
Issues = "https://github.com/alexandrainst/zebra_puzzles/issues"

[project.license]
file = "LICENSE"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "readme-coverage-badger>=0.1.2",
    "click>=8.1.7",
    "ruff>=0.9.1",
    "mypy>=1.14.1",
    "nbstripout>=0.8.1",
    "coverage>=5.5",
    "mkdocs-material>=9.5.45",
    "mkdocs-include-markdown-plugin>=7.0.1",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkapi>=3.0.22",
    "pip>=24.3.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "I",
    "D",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/zebra_puzzles',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/zebra_puzzles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
